# tripwire

./: .gitignore  LICENSE  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish-npm.yml
cli/node/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
cli/node/src/: cli.ts  index.ts
cli/node/src/api/: client.ts  errors.ts
cli/node/src/commands/: api.ts  auth.ts  bundle.ts  canary.ts  create.ts  status.ts
cli/node/src/config/: credentials.ts
cli/node/src/placements/: deliver.ts  index.ts  namegen.ts  opsec.ts  render.ts  writer.ts
cli/node/src/types/: registry.ts
cli/node/src/util/: errors.ts  format.ts  io.ts  login.ts  prompt.ts  session.ts
cli/node/test/: api.test.ts  auth.test.ts  bundle.test.ts  create-reveal.test.ts  create.test.ts  namegen.test.ts  opsec.test.ts  placement-delivery.test.ts  registry.test.ts  render.test.ts  simplification.test.ts  types.test.ts  writer.test.ts
cli/python/: README.md  pyproject.toml
cli/python/tests/: test_auth.py  test_cli.py  test_client.py  test_credentials.py
cli/python/tripwire_cli/: __main__.py  cli.py  client.py  credentials.py  prompt.py
plugins/claude-code/: README.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/commands/: init.md
plugins/claude-code/skills/: tripwire-api.md
plugins/claude-code/skills/add-canary/: SKILL.md
plugins/claude-code/skills/check-alerts/: SKILL.md
tripwire/.claude-plugin/: plugin.json
tripwire/skills/: tripwire-api.md
tripwire/skills/check-alerts/: SKILL.md
(+5 files in other folders)
