[project]
name = "tripwire-cli"
version = "0.3.0"
description = "Command-line client for Tripwire canaries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
tripwire = "tripwire_cli.cli:main"
tripwire-cli = "tripwire_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tripwire_cli"]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
